# yawp

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  install.sh  pyproject.toml  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check.yml  ci.yml  release.yml
docs/: ARCHITECTURE.md  DISTRIBUTION.md  HANDY_REVIEW.md  RELEASE_HARDENING.md  WAYLAND_SHORTCUTS.md  index.html
scripts/: check  debug-bundle  doctor  install-smoke  package-appimage  release-check  uninstall  yawp
sidecar/: daemon.py  requirements-dev.txt  requirements.txt  run.py
sidecar/app/: asr.py  cleanup.py  config.py  db.py  diagnostics.py  events.py  exporter.py  grammar.py  logging_config.py  main.py  native_capture.py  openrouter.py  runtime.py  schemas.py  services.py  settings.py  smart_metadata.py  storage.py  tagging.py  todos.py  transcription_service.py  voice_commands.py
sidecar/tests/: conftest.py  test_api_flows.py  test_audio_preparation.py  test_cleanup.py  test_daemon_paste.py  test_db.py  test_diagnostics.py  test_migrations_and_security.py  test_openrouter.py  test_requirements.py  test_tagging.py  test_voice_commands.py
tools/: benchmark_asr.py  make_icon.py  repro-blackout.sh
voice-app/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
voice-app/src-tauri/: Cargo.toml  tauri.conf.json
voice-app/src-tauri/icons/: icon.icns
voice-app/src-tauri/src/: lib.rs  main.rs
(+51 files in other folders)
